Fix grid aspect-ratio tests https://bugs.webkit.org/show_bug.cgi?id=225860

Patch by Rob Buis <rbuis@igalia.com> on 2021-07-20
Reviewed by Javier Fernandez.

LayoutTests/imported/w3c:

Import aspect-ratio tests based on 56bf98c5c0.

* web-platform-tests/css/css-sizing/aspect-ratio/grid-aspect-ratio-013-expected.xht: Removed.
* web-platform-tests/css/css-sizing/aspect-ratio/grid-aspect-ratio-013.html: Removed.
* web-platform-tests/css/css-sizing/aspect-ratio/grid-aspect-ratio-018.html:
* web-platform-tests/css/css-sizing/aspect-ratio/grid-aspect-ratio-019.html:

Source/WebCore:

Fix various combinations of implicit/explicit stretching in inline and
block directions as tested by grid-aspect-ratio-028.html until
grid-aspect-ratio-038.html and as specified [1, 2].
Also treat explicit stretching through justify-items/align-items: stretch
like justify-self/align-self: stretch.

[1] https://drafts.csswg.org/css-grid/#grid-item-sizing
[2] //drafts.csswg.org/css-sizing-4/#aspect-ratio

* rendering/RenderBox.cpp:
(WebCore::RenderBox::hasStretchedLogicalWidth const):
(WebCore::RenderBox::shouldComputeLogicalWidthFromAspectRatio const):
* rendering/RenderBox.h:
* rendering/RenderGrid.cpp:
(WebCore::RenderGrid::selfAlignmentForChild const):
(WebCore::RenderGrid::alignSelfForChild const):
(WebCore::RenderGrid::justifySelfForChild const):
(WebCore::RenderGrid::aspectRatioPrefersInline):
(WebCore::RenderGrid::applyStretchAlignmentToChildIfNeeded):
(WebCore::RenderGrid::hasAutoSizeInColumnAxis const):
(WebCore::RenderGrid::hasAutoSizeInRowAxis const):
* rendering/RenderGrid.h:

LayoutTests:

Unskip tests that now pass.

* TestExpectations:

Canonical link: https://commits.webkit.org/239801@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280075 268f45cc-cd09-0410-ab3c-d52691b4dbfc